load("//bazel/java:test.bzl", "java_test_suite")

java_test_suite(
    name = "leasing",
    srcs = [
        "DynamicLeaderLeaseManagerTest.java",
        "LeaseManagerOpsCommandsTest.java",
        "LeaseTest.java",
        "StaticLeaderLeaseManagerTest.java",
        "StatusResolutionUtilsTest.java",
    ],
    data = ["//src/test/unit/resources/embedding/mongodb/leasing:srcs"],
    tags = ["unit"],
    deps = [
        "//src/main/java/com/xgen/mongot/embedding/config",
        "//src/main/java/com/xgen/mongot/embedding/exceptions",
        "//src/main/java/com/xgen/mongot/embedding/mongodb/common",
        "//src/main/java/com/xgen/mongot/embedding/mongodb/leasing",
        "//src/main/java/com/xgen/mongot/index",
        "//src/main/java/com/xgen/mongot/index/autoembedding",
        "//src/main/java/com/xgen/mongot/index/definition",
        "//src/main/java/com/xgen/mongot/index/status",
        "//src/main/java/com/xgen/mongot/index/version",
        "//src/main/java/com/xgen/mongot/replication/mongodb/common",
        "//src/main/java/com/xgen/mongot/util",
        "//src/main/java/com/xgen/mongot/util/mongodb/serialization",
        "//src/main/java/com/xgen/testing",
        "//src/main/java/com/xgen/testing/mongot/metrics",
        "//src/main/java/com/xgen/testing/mongot/mock/index",
        "//src/main/java/com/xgen/testing/mongot/replication/mongodb",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mongodb_bson",
        "@maven//:org_mongodb_mongodb_driver_core",
        "@maven//:org_mongodb_mongodb_driver_sync",
    ],
)
